# Vision2017

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/techfire225/firevision2017/: ApplicationTest.java
app/src/cpp/: vision.c  vision.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/org/opencv/android/: BetterCamera2Renderer.java  BetterCameraGLRendererBase.java  BetterCameraGLSurfaceView.java
app/src/main/java/org/techfire225/firevision2017/: MainActivity.java  MjpgServer.java  Native.java  VisionMessage.java  VisionServer.java  VisionTrackerGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/techfire225/firevision2017/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
